project_3/project_3.sdk/.metadata/.plugins/org.eclipse.cdt.ui/quicksort2.build.log
11:05:44 **** Incremental Build of configuration Debug for project quicksort2 ****
make all 
'Building file: ../src/quicksort2.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/quicksort2.o" -I../../quicksort2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/quicksort2.d" -MT"src/quicksort2.d" -o "src/quicksort2.o" "../src/quicksort2.c"
../src/quicksort2.c:68:1: warning: excess elements in array initializer [enabled by default]
 int randomarray[400] = {3242,1399,8678,6972,5878,4279,3564,5766,5327,9240,9363,4261,878,6349,9712,7401,1912,8577,5729,5893,8413,2565,9049,9536,3329,386,7179,2647,6478,8238,8377,5010,4679,3011,8218,6795,7813,2663,5054,873,5474,1341,6545,975,3927,5182,4453,9130,8036,9742,9887,810,7869,4981,6178,1235,4649,8738,1586,1268,5756,4650,9016,6330,3454,5435,4932,6788,7041,7485,4657,3238,3099,7707,6252,5138,3541,8545,150,6206,6136,2123,6745,5041,7206,9453,9115,4397,1171,5626,3068,7537,6647,6953,1703,5130,3764,963,6669,1099,2408,5217,3310,6071,5866,1881,506,986,1895,2034,3,5251,5981,2746,9455,7611,7922,4888,1253,607,1547,8614,6929,7761,1073,2763,2003,9491,7826,8467,7315,7445,3269,4134,245,1946,9283,4014,4275,2219,1626,7524,334,4109,7515,1521,8354,4961,3267,2715,2478,357,2934,2402,8357,2398,3873,710,5979,4209,190,2548,6459,374,9987,2439,6229,7968,7358,423,7076,7880,5070,6227,5448,1126,8861,3887,9481,9820,9305,3999,7178,7509,2157,5796,4173,8541,3153,6243,4527,1176,8161,8326,2989,4102,5724,1067,5431,6065,3,4,6264,162,4924,4656,4709,6802,4033,5405,7004,8570,6219,612,2063,4485,5594,8704,1825,3834,1042,8903,1520,1359,1231,4174,2790,9141,8591,5090,5631,2369,5698,9306,72,1185,2490,6318,3548,5790,7768,2214,4883,7000,3409,4084,838,9437,4726,8786,6154,9545,5429,5762,3029,5623,605,8577,964,2044,6162,4879,2919,4876,8184,9465,8718,1067,614,136,1630,8395,4727,9081,8370,8805,3182,3414,9264,1477,6769,3654,7136,5137,4204,2408,6897,4871,1406,3022,3506,1866,3923,3312,3664,7983,7852,8828,6179,8002,2536,5473,9407,1554,4747,6400,9721,9855,6620,1206,992,2946,2244,4764,6263,9095,3665,3826,7564,473,2737,1334,208,4177,6424,1715,3042,9065,676,9504,6495,784,69,3103,5913,5386,3622,202,1165,6346,7709,9480,8586,1648,352,3065,2690,3532,3546,854,457,9037,3793,8751,154,5147,354,2510,9883,8,4348,6883,1832,7414,2121,4730,3133,6732,1339,5815,9285,5472,3221,9944,1072,6679,9375,4152,914,8335,6651,8625,9588,6960,8468,1027,9262,2604,6032,3944,3770,7408,7904,5120,2073,4928,1341,5163,5841,2413,3854,2435,6};
 ^
../src/quicksort2.c:68:1: warning: (near initialization for 'randomarray') [enabled by default]
../src/quicksort2.c:68:1: warning: excess elements in array initializer [enabled by default]
../src/quicksort2.c:68:1: warning: (near initialization for 'randomarray') [enabled by default]
../src/quicksort2.c:68:1: warning: excess elements in array initializer [enabled by default]
../src/quicksort2.c:68:1: warning: (near initialization for 'randomarray') [enabled by default]
../src/quicksort2.c: In function 'main':
../src/quicksort2.c:193:8: error: 'Status' undeclared (first use in this function)
     if(Status != 0)
        ^
../src/quicksort2.c:193:8: note: each undeclared identifier is reported only once for each function it appears in
../src/quicksort2.c:195:28: error: 'main_result' undeclared (first use in this function)
      printf("FAILED;%d;\n",main_result);
                            ^
make: *** [src/quicksort2.o] Error 1

11:05:44 Build Finished (took 744ms)

